--- a/index.html
+++ b/index.html
@@ -5,5 +5,14 @@
   </head>
   <body>
     <h1>Thomas Zwetsloot</h1>
+    <section class="assign">
+      <img src="images/MapProblem.jpg"/>
+      <section class="assign-det">
+        <h2>Problem statement: Directions Pathing</h2>
+        <p>
+          Walking directions often don't take good paths.
+        </p>
+      </section>
+    </section>
   </body>
 </html>
