--- a/index.html
+++ b/index.html
@@ -14,5 +14,15 @@
         </p>
       </section>
     </section>
+    <!--Affinity Diagram Assignment-->
+    <section class="assign">
+      <img src="images/affinity-diagram.jpg"/>
+      <section class="assign-det">
+        <a href="files/affinity-diagram.pdf"><h2>Affinity Diagram: Gloves</h2></a>
+        <p>
+          This details design elements and ideal specifications of self-cleaning retractible gloves.
+        </p>
+      </section>
+    </section>
   </body>
 </html>
