--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>Thomas Zwetsloot</h1>
+    <!--Problem Statement Assignment-->
     <section class="assign">
       <img src="images/MapProblem.jpg"/>
       <section class="assign-det">
@@ -21,6 +22,16 @@
         <a href="files/affinity-diagram.pdf"><h2>Affinity Diagram: Gloves</h2></a>
         <p>
           This details design elements and ideal specifications of self-cleaning retractible gloves.
+        </p>
+      </section>
+    </section>
+    <!--Personas Assignment-->
+    <section class="assign">
+      <img src="images/my-persona.jpg"/>
+      <section class="assign-det">
+        <a href="files/all-personas.pdf"><h2>Team Personas: The Glovelies</h2></a>
+        <p>
+          My persona's name is Heh Heh. He is best known for his wise words "Lol, lmao."
         </p>
       </section>
     </section>
