--- a/index.html
+++ b/index.html
@@ -36,5 +36,15 @@
         </p>
       </section>
     </section>
+    <!--Storyboard Assignment-->
+    <section class="assign">
+      <img src="images/my-storyboard.jpg"/>
+      <section class="assign-det">
+        <a href="files/all-storyboards.pdf"><h2>Team Storyboards: Happy Glovelies</h2></a>
+        <p>
+          My storyboard features Heh protecting himself from printer ink stains and getting a joke out of the deal.
+        </p>
+      </section>
+    </section>
   </body>
 </html>
