created template for assignments on main page

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -1,1 +1,12 @@
-hello education provider
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>CSCE 242 AWESOME WEBSITE</title>
+    </head>
+    <body>
+        <h1>Hello education provider</h1>
+        <ol>
+            <li><a href="assignments/01html/index.html">Basic HTML</a></li>
+        </ol>
+    </body>
+</html>
