fixed a typo in assignment 1 html

--- a/csce242/assignments/01html/index.html
+++ b/csce242/assignments/01html/index.html
@@ -43,7 +43,7 @@
         <ul>
             <li>Cut Depth, or the distance from a side that a shape is split into a puzzle</li>
             <li>Shape Mods, or applying the same puzzle mechanism to s new shape</li>
-            <li>Hybrid mechanisms, or applying multiple different mechanisms to the same shape</li>
+            <li>Hybrid Mechanisms, or applying multiple different mechanisms to the same shape</li>
         </ul>
 
         <p>Thanks for reading! I hope you learned a bit about this surprisingly deep niche.</p>
