--- a/csce242/index.html
+++ b/csce242/index.html
@@ -2,16 +2,23 @@
 <html lang="en">
     <head>
         <title>CSCE 242 AWESOME WEBSITE</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>CSCE 242 Web Applications</h1>
-        <h2>Thomas Zwetsloot</h2>
+        <div id="content">
+            <h1>CSCE 242 Web Applications</h1>
+            <h2>Thomas Zwetsloot</h2>
 
-        <p>This class is part of the University of South Carolina's required CSCE curriculum. Its intent is to teach the skills required to create web applications/websites. Topics covered concerning front end development include HTML and CSS. (Clearly CSS hasn't been covered yet, look at this. Yeesh.) Later, back end development is taught, first with basic JavaScript and then using Node to enable servers to run js code. There's some JSON thrown in there too, just for fun.</p>
+            <p>This class is part of the University of South Carolina's required CSCE curriculum. Its intent is to teach the skills required to create web applications/websites. Topics covered concerning front end development include HTML and CSS. Later, back end development is taught, first with basic JavaScript and then using Node to enable servers to run js code. There's some JSON thrown in there too, just for fun.</p>
+            <p><a href="https://github.com/Jellylamps/jellylamps.github.io/tree/main/csce242">Main GitHub Repo</a></p>
 
-        <h2>Assignments</h2>
-        <ol>
-            <li><a href="assignments/01html/index.html">Basic HTML</a></li>
-        </ol>
+            <div id="assignments">
+                <h2>Assignments</h2>
+                <ol>
+                    <li><a href="assignments/01html/index.html">Basic HTML</a></li>
+                    <li><a href="assignments/02css/index.html">Basic CSS</a></li>
+                </ol>
+            </div>
+        </div>
     </body>
 </html>
