created assignment 2 content

--- a/csce242/assignments/02css/index.html
+++ b/csce242/assignments/02css/index.html
@@ -1,1 +1,53 @@
-Add some stuff here please
+<!--Thomas Zwetsloot CSCE 242-->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Stained Glass Assignment</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <div id="content">
+            <h1>Stained Glass</h1>
+            <h2>A Wonderful Excuse to Make this Page Pretty</h2>
+
+            <p>I could have chosen to employ a lorem ipsum here, but I elect to ramble instead. If you're reading this, I appreciate that. While it's just as unnecessary as the contents of this paragraph, sometimes it's the unnecessary things that stick with us. Maybe this habit of adding my own personal flair will get me places, and maybe it won't. I'm happy to do it either way.</p>
+
+            <p id="pictures"><img src="images/lamp.jpg" alt="A tiffany style lamp. My family actually owns this exact one." id="lamp"><img src="images/window.jpg" alt="A stained glass window" id="window"></p>
+
+            <p>I'm glad to be working on something that demands at least a bit of an artist's eye. I truly find a lot of value in anything that mixes technical and artistic skillsets. I'd never want to abandon one fully for the other. They both mean too much to me for that. Having the freedom to type what I want here is pretty nice too.</p>
+
+            <table>
+                <tr>
+                    <th>Number</th>
+                    <th>Letter</th>
+                    <th>Note</th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>A</td>
+                    <td>Do</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>B</td>
+                    <td>Re</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>C</td>
+                    <td>Mi</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>D</td>
+                    <td>Fa</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>E</td>
+                    <td>So</td>
+                </tr>
+            </table>
+        </div>
+    </body>
+</html>
