--- a/csce242/index.html
+++ b/csce242/index.html
@@ -7,19 +7,43 @@
     </head>
     <body>
         <div id="content">
-            <h1>CSCE 242 Web Applications</h1>
-            <h2>Thomas Zwetsloot</h2>
+            <header id="core-header">
+                <h1>CSCE 242 Web Applications</h1>
+                <h2 id="name">Thomas Zwetsloot</h2>
 
-            <p>This class is part of the University of South Carolina's required CSCE curriculum. Its intent is to teach the skills required to create web applications/websites. Topics covered concerning front end development include HTML and CSS. Later, back end development is taught, first with basic JavaScript and then using Node to enable servers to run js code. There's some JSON thrown in there too, just for fun.</p>
-            <p><a href="https://github.com/Jellylamps/jellylamps.github.io/tree/main/csce242">Main GitHub Repo</a></p>
-
-            <div id="assignments">
+                <p>This class is part of the University of South Carolina's required CSCE curriculum. Its intent is to teach the skills required to create web applications/websites. Topics covered concerning front end development include HTML and CSS. Later, back end development is taught, first with basic JavaScript and then using Node to enable servers to run js code. There's some JSON thrown in there too, just for fun.</p>
+                <p><a href="https://github.com/Jellylamps/jellylamps.github.io/tree/main/csce242">Main GitHub Repo</a></p>
+            </header>
+            
+            <main id="core-main">
                 <h2>Assignments</h2>
-                <ol>
-                    <li><a href="assignments/01html/index.html">Basic HTML</a></li>
-                    <li><a href="assignments/02css/index.html">Basic CSS</a></li>
-                </ol>
-            </div>
+
+                <nav id="core-nav">
+                    <ul class="columns">
+                        <a href="assignments/01html/index.html"> <!--<div> inside of <a> so that entire block can be clicked-->
+                            <div class="assignment">
+                                <p>Assignment 1 - Basic HTML</p>
+                                <img src="images/assign1.png">
+                                <p>A simple example of introductory conepts in HTML using basic tags</p>
+                            </div>
+                        </a>
+                        <a href="assignments/02css/index.html">
+                            <div class="assignment">
+                                <p>Assignment 2 - Basic CSS</p>
+                                <img src="images/assign2.png">
+                                <p>A showcase of simple CSS used to beautify a simple page</p>
+                            </div>
+                        </a>
+                        <a href="#">
+                            <div class="assignment">
+                                <p>Assignment 3 - Page Layout</p>
+                                <img src="images/assign3.png">
+                                <p>A demonstration of flexboxes and dynamic layouts depending on display resolution/aspect ratio</p>
+                            </div>
+                        </a>
+                    </ul>
+                </nav>
+            </main>
         </div>
     </body>
 </html>
