completed assignment 3 and linked to it on home page

--- a/csce242/assignments/03layout/index.html
+++ b/csce242/assignments/03layout/index.html
@@ -22,8 +22,10 @@
                 <div id="ideas" class="columns">
                     <section id="idea">
                         <div class="columns">
-                            <img src="https://dummyimage.com/200x400/a4bfb8/fff.jpg" class="one">
-                            <div class="three">
+                            <div id="image">
+                                <img src="https://dummyimage.com/200x400/a4bfb8/fff.jpg">
+                            </div>
+                            <div>
                                 <h2>Idea 1</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                             </div>
@@ -31,8 +33,10 @@
                     </section>
                     <section id="idea" class="hide-portrait">
                         <div class="columns hide-portrait">
-                            <img src="https://dummyimage.com/200x400/a4bfb8/fff.jpg" class="one">
-                            <div class="three">
+                            <div id="image">
+                                <img src="https://dummyimage.com/200x400/a4bfb8/fff.jpg">
+                            </div>
+                            <div>
                                 <h2>Idea 2</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                             </div>
@@ -40,16 +44,83 @@
                     </section>
                     <section id="idea" class="hide-portrait">
                         <div class="columns hide-portrait">
-                            <img src="https://dummyimage.com/200x400/a4bfb8/fff.jpg" class="one">
-                            <div class="three">
+                            <div id="image">
+                                <img src="https://dummyimage.com/200x400/a4bfb8/fff.jpg">
+                            </div>
+                            <div>
                                 <h2>Idea 3</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                             </div>
                         </div>
                     </section>
-                    <section id="idea" class="hide-portrait"></section>
+                </div>
+                <div id="grid" class="columns">
+                    <section id="links" class="one">
+                        <h3>Links</h3>
+                        <ul>
+                            <li><a href="#">Item 1</a></li>
+                            <li><a href="#">Item 2</a></li>
+                            <li><a href="#">Item 3</a></li>
+                            <li><a href="#">Item 4</a></li>
+                        </ul>
+                    </section>
+                    <section id="titles" class="columns two">
+                        <div id="title" class="grid-card">
+                            <h3>Title 1</h3>
+                            <img src="https://dummyimage.com/200x100/a4bfb8/fff.jpg">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        </div>
+                        <div id="title" class="grid-card">
+                            <h3>Title 2</h3>
+                            <img src="https://dummyimage.com/200x100/a4bfb8/fff.jpg">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        </div>
+                        <div id="title" class="grid-card">
+                            <h3>Title 3</h3>
+                            <img src="https://dummyimage.com/200x100/a4bfb8/fff.jpg">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        </div>
+                        <div id="title" class="grid-card">
+                            <h3>Title 4</h3>
+                            <img src="https://dummyimage.com/200x100/a4bfb8/fff.jpg">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        </div>
+                    </section>
+                    <section id="galleries" class="columns three">
+                        <div id="gallery" class="grid-card">
+                            <h3>Gallery 1</h3>
+                            <img src="https://dummyimage.com/200x50/608588/fff.jpg">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        </div>
+                        <div id="gallery" class="grid-card">
+                            <h3>Gallery 2</h3>
+                            <img src="https://dummyimage.com/200x50/608588/fff.jpg">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        </div>
+                        <div id="gallery" class="grid-card">
+                            <h3>Gallery 3</h3>
+                            <img src="https://dummyimage.com/200x50/608588/fff.jpg">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        </div>
+                        <div id="gallery" class="grid-card">
+                            <h3>Gallery 4</h3>
+                            <img src="https://dummyimage.com/200x50/608588/fff.jpg">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        </div>
+                        <div id="gallery" class="grid-card">
+                            <h3>Gallery 5</h3>
+                            <img src="https://dummyimage.com/200x50/608588/fff.jpg">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        </div>
+                        <div id="gallery" class="grid-card">
+                            <h3>Gallery 6</h3>
+                            <img src="https://dummyimage.com/200x50/608588/fff.jpg">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        </div>
+                    </section>
                 </div>
             </main>
+            <footer>@thomaszwetsloot.com</footer>
         </div>
     </body>
 </html>
