--- a/csce242/index.html
+++ b/csce242/index.html
@@ -34,7 +34,7 @@
                                 <p>A showcase of simple CSS used to beautify a simple page</p>
                             </div>
                         </a>
-                        <a href="#">
+                        <a href="assignments/03layout/index.html">
                             <div class="assignment">
                                 <p>Assignment 3 - Page Layout</p>
                                 <img src="images/assign3.png">
