fixed a silly mistake where I misread skipped content in reference images as intended to be hidden

--- a/csce242/assignments/03layout/index.html
+++ b/csce242/assignments/03layout/index.html
@@ -31,8 +31,8 @@
                             </div>
                         </div>
                     </section>
-                    <section id="idea" class="hide-portrait">
-                        <div class="columns hide-portrait">
+                    <section id="idea">
+                        <div class="columns">
                             <div id="image">
                                 <img src="https://dummyimage.com/200x400/a4bfb8/fff.jpg">
                             </div>
@@ -42,8 +42,8 @@
                             </div>
                         </div>
                     </section>
-                    <section id="idea" class="hide-portrait">
-                        <div class="columns hide-portrait">
+                    <section id="idea">
+                        <div class="columns">
                             <div id="image">
                                 <img src="https://dummyimage.com/200x400/a4bfb8/fff.jpg">
                             </div>
