added projects section to home page

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -22,23 +22,36 @@
                     <ul class="columns">
                         <a href="assignments/01html/index.html"> <!--<div> inside of <a> so that entire block can be clicked-->
                             <div class="assignment">
-                                <p>Assignment 1 - Basic HTML</p>
+                                <h3>Basic HTML</h3>
                                 <img src="images/assign1.png">
                                 <p>A simple example of introductory conepts in HTML using basic tags</p>
                             </div>
                         </a>
                         <a href="assignments/02css/index.html">
                             <div class="assignment">
-                                <p>Assignment 2 - Basic CSS</p>
+                                <h3>Basic CSS</h3>
                                 <img src="images/assign2.png">
                                 <p>A showcase of simple CSS used to beautify a simple page</p>
                             </div>
                         </a>
                         <a href="assignments/03layout/index.html">
                             <div class="assignment">
-                                <p>Assignment 3 - Page Layout</p>
+                                <h3>Page Layout</h3>
                                 <img src="images/assign3.png">
                                 <p>A demonstration of flexboxes and dynamic layouts depending on display resolution/aspect ratio</p>
+                            </div>
+                        </a>
+                    </ul>
+                </nav>
+                <h2>Projects</h2>
+
+                <nav id="core-nav">
+                    <ul class="columns">
+                        <a href="projects/part1/Topic.pdf"> <!--<div> inside of <a> so that entire block can be clicked-->
+                            <div class="assignment">
+                                <h3>Topic Selection</h3>
+                                <img src="images/assign1.png">
+                                <p>A short description of my initial plans for the project</p>
                             </div>
                         </a>
                     </ul>
