finished assignment 4 and added it to home page

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -38,6 +38,13 @@
                             <div class="assignment">
                                 <h3>Page Layout</h3>
                                 <img src="images/assign3.png">
+                                <p>A demonstration of flexboxes and dynamic layouts depending on display resolution or aspect ratio</p>
+                            </div>
+                        </a>
+                        <a href="assignments/04recreate/index.html">
+                            <div class="assignment">
+                                <h3>Recreate CSS</h3>
+                                <img src="images/assign4.png">
                                 <p>A demonstration of flexboxes and dynamic layouts depending on display resolution/aspect ratio</p>
                             </div>
                         </a>
