added wireframe project

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -54,11 +54,18 @@
 
                 <nav id="core-nav">
                     <ul class="columns">
-                        <a href="projects/part1/Topic.pdf"> <!--<div> inside of <a> so that entire block can be clicked-->
+                        <a href="projects/part1/Topic.pdf">
                             <div class="assignment">
                                 <h3>Topic Selection</h3>
-                                <img src="images/assign1.png">
+                                <img src="images/project1.png">
                                 <p>A short description of my initial plans for the project</p>
+                            </div>
+                        </a>
+                        <a href="projects/part2/index.html">
+                            <div class="assignment">
+                                <h3>Wireframe</h3>
+                                <img src="images/project2.png">
+                                <p>A basic layout for the eventual project site</p>
                             </div>
                         </a>
                     </ul>
