--- a/csce242/index.html
+++ b/csce242/index.html
@@ -48,6 +48,13 @@
                                 <p>A demonstration of flexboxes and dynamic layouts depending on display resolution/aspect ratio</p>
                             </div>
                         </a>
+                        <a href="assignments/05js/index.html">
+                            <div class="assignment">
+                                <h3>JS Functions</h3>
+                                <img src="images/assign5.png">
+                                <p>A display of introductory JavaScript functionality</p>
+                            </div>
+                        </a>
                     </ul>
                 </nav>
                 <h2>Projects</h2>
