added project site skeleton

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -75,6 +75,13 @@
                                 <p>A basic layout for the eventual project site</p>
                             </div>
                         </a>
+                        <a href="projects/part3/index.html">
+                            <div class="assignment">
+                                <h3>HTML and CSS</h3>
+                                <img src="images/project3.png">
+                                <p>The basic structure of the project site</p>
+                            </div>
+                        </a>
                     </ul>
                 </nav>
             </main>
