--- a/csce242/examples/js/js-intro.html
+++ b/csce242/examples/js/js-intro.html
@@ -53,6 +53,33 @@
                     <p id="p-emotion"></p>
                     <img id="img-emotion" src="https://dummyimage.com/100x100/000/fff" class="hidden">
                 </section>
+                <section>
+                    <h3>Mood Ring</h3>
+                    <p>
+                        <label for="txt-color">Enter Color:</label>
+                        <input type="text" id="txt-color">
+                        <span id="error-color" class="error"></span>
+                    </p>
+                    <button id="btn-mood-ring">Reveal</button>
+                    <p id="p-mood"></p>
+                </section>
+                <section>
+                    <h3>Animations</h3>
+                    <div id="ball"></div>
+                    <button id="btn-ball">Start</button>
+                </section>
+                <section>
+                    <button id="btn-count-start">Start</button>
+                    <button id="btn-count-stop" disabled="true">Stop</button>
+                    <p id="p-count"></p>
+                </section>
+                <section>
+                    <h3 id="p-goal">Charity Goal: $<span id="span-goal"></span></h3>
+                    <label for="txt-donation">Donation:</label><span id="donation-error"></span>
+                    <input id="txt-donation" type="text">
+                    <button id="btn-donate">Add Donation</button>
+                    <div id="bar"><div id="progress"></div></div>
+                </section>
             </main>
             <footer>
                 <p>&copy; myname</p>
