added assignment 6 to home page

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -55,6 +55,13 @@
                                 <p>A display of introductory JavaScript functionality</p>
                             </div>
                         </a>
+                        <a href="assignments/06conditionals/index.html">
+                            <div class="assignment">
+                                <h3>JS Conditionals</h3>
+                                <img src="images/assign6.png">
+                                <p>A display of simple JS Conditional logic</p>
+                            </div>
+                        </a>
                     </ul>
                 </nav>
                 <h2>Projects</h2>
