added project 4 to home page

--- a/csce242/index.html
+++ b/csce242/index.html
@@ -89,6 +89,13 @@
                                 <p>The basic structure of the project site</p>
                             </div>
                         </a>
+                        <a href="projects/part4/index.html">
+                            <div class="assignment">
+                                <h3>Colors Images & Text</h3>
+                                <img src="images/project4.png">
+                                <p>Fleshing out the content of the project site</p>
+                            </div>
+                        </a>
                     </ul>
                 </nav>
             </main>
