--- a/csce242/index.html
+++ b/csce242/index.html
@@ -62,6 +62,13 @@
                                 <p>A display of simple JS Conditional logic</p>
                             </div>
                         </a>
+                        <a href="assignments/07loops/index.html">
+                            <div class="assignment">
+                                <h3>JS Loops</h3>
+                                <img src="images/assign7.png">
+                                <p>A showcase of JS loops and some CSS art</p>
+                            </div>
+                        </a>
                     </ul>
                 </nav>
                 <h2>Projects</h2>
