added more to example

--- a/csce242/examples/js/loops.html
+++ b/csce242/examples/js/loops.html
@@ -54,6 +54,17 @@
                     <p><button id="btn-count">Count</button></p>
                     <div id="div-count"></div>
                 </section>
+                <section>
+                    <h3>Toys</h3>
+                    <button id="btn-toys">Show Toys</button>
+                    <ul id="toy-list"></ul>
+                </section>
+                <section>
+                    <h3>Toys (with Prices!)</h3>
+                    <button id="btn-toy-prices">Show Toy Prices</button>
+                    <div id="div-toy-prices"></div>
+                    <p id="info"></p>
+                </section>
             </main>
             <footer>
                 <p>&copy; myname</p>
