--- a/csce242/index.html
+++ b/csce242/index.html
@@ -103,6 +103,13 @@
                                 <p>Fleshing out the content of the project site</p>
                             </div>
                         </a>
+                        <a href="projects/part5/index.html">
+                            <div class="assignment">
+                                <h3>Tweaks and Improvements</h3>
+                                <img src="images/project5.png">
+                                <p>Incorporating feedback from instructors and classmates</p>
+                            </div>
+                        </a>
                     </ul>
                 </nav>
             </main>
