incorporated bold text suggestion

--- a/csce242/projects/part5/index.html
+++ b/csce242/projects/part5/index.html
@@ -25,13 +25,13 @@
             <div class="text-block columns">
                 <section>
                     <h2>What is a "monodihedral polyhedron"?</h2>
-                    <p>Every 3D shape with flat sides (polyhedron) has one or more dihedral angles. A dihedral angle is the angle between two faces that share an edge. A monodihedral polyhedron has the interesting and rare property that every single dihedral angle is the same for the whole shape.</p>
-                    <p>This page aims to record and catalogue newly discovered shapes with this property, as it is surprisingly under explored as a geometric concept.</p>
+                    <p>Every 3D shape with flat sides (<strong>polyhedron</strong>) has one or more dihedral angles. A <strong>dihedral angle</strong> is the angle between two faces that share an edge. A <strong>monodihedral polyhedron</strong> has the interesting and rare property that <strong>every single dihedral angle is the same for the whole shape.</strong></p>
+                    <p>This page aims to record and catalogue <strong>newly discovered</strong> shapes with this property, as it is surprisingly under explored as a geometric concept.</p>
                     <p>This website elects not to include already well documented monodihedral shapes, such as all platonic and catalan solids.</p>
                 </section>
                 <aside>
                     <img src="images/Cube.jpg">
-                    <p>a cube, the most well known shape in this category</p>
+                    <p class="faded">a cube, the most well known shape in this category</p>
                 </aside>
             </div>
             <div class="text-block columns">
@@ -42,7 +42,7 @@
                 </section>
                 <aside>
                     <img src="images/Puzzle.jpg">
-                    <p>a design for a puzzle derived from the crimped tetrahedron</p>
+                    <p class="faded">a design for a puzzle derived from the crimped tetrahedron</p>
                 </aside>
             </div>
             <p id="name">&copy;Thomas Zwetsloot</p>
