--- a/csce242/projects/part5/processes.html
+++ b/csce242/projects/part5/processes.html
@@ -24,15 +24,15 @@
             <h3>Here's a brief description of some of the methods used to derive polyhedra appearing on this list:</h3>
             <div class="text-block">
                 <h2>Crimping</h2>
-                <p>Crimping is a term I coined to describe the process of "pinching off" the corners of a polyhedron. Functionally, this can be described as cutting the corners with the surface of a pyramid with its edges directly between those of the corner. In most cases, these pyramids are based halfway along the edges belonging to the corner, with one exception (the alternating crimped cube) where it is instead based at the far ends of the edges.</p>
+                <p>Crimping is a term I coined to describe the process of "pinching off" the corners of a polyhedron. Functionally, this can be described as cutting the corners with the surface of a pyramid with its edges directly between those of the corner. In most cases, these pyramids are based halfway along the edges belonging to the corner, with one exception (the <strong>alternating crimped cube</strong>) where it is instead based at the far ends of the edges.</p>
                 <section class="always columns">
                     <section>
                         <img src="images/Tetra.jpg">
-                        <p>a tetrahedron</p>
+                        <p class="faded">a tetrahedron</p>
                     </section>
                     <section>
                         <img src="images/CTetra.jpg">
-                        <p>a crimped tetrahedron</p>
+                        <p class="faded">a crimped tetrahedron</p>
                     </section>
                 </section>
             </div>
@@ -42,11 +42,11 @@
                 <section class="always columns">
                     <section>
                         <img src="images/Tetra.jpg">
-                        <p>a tetrahedron</p>
+                        <p class="faded">a tetrahedron</p>
                     </section>
                     <section>
                         <img src="images/DCTetra.jpg">
-                        <p>a double crimped tetrahedron</p>
+                        <p class="faded">a double crimped tetrahedron</p>
                     </section>
                 </section>
             </div>
@@ -56,11 +56,11 @@
                 <section class="always columns">
                     <section>
                         <img src="images/Cuboc.jpg">
-                        <p>a cuboctahedron</p>
+                        <p class="faded">a cuboctahedron</p>
                     </section>
                     <section>
                         <img src="images/FSCubocta.jpg">
-                        <p>a fully stellated cuboctahedron</p>
+                        <p class="faded">a fully stellated cuboctahedron</p>
                     </section>
                 </section>
             </div>
@@ -70,25 +70,25 @@
                 <section class="always columns">
                     <section>
                         <img src="images/DCTetra.jpg">
-                        <p>a double crimped tetrahedron</p>
+                        <p class="faded">a double crimped tetrahedron</p>
                     </section>
                     <section>
                         <img src="images/TDCTetra.jpg">
-                        <p>a truncated double crimped tetrahedron</p>
+                        <p class="faded">a truncated double crimped tetrahedron</p>
                     </section>
                 </section>
             </div>
             <div class="text-block">
                 <h2>"Propellor" Operation</h2>
-                <p>This process, not discovered by me, involves "pulling out" the faces of a platonic solid and rotating them all by the same amount before connecting all the old and new vertices together. There are many versions of this operation, but one of them specifically creates monodihedral polyhedra. This class of solids is unique for being chiral, a trait shared only by the pentagonal catalan solids among monodihedral polyhedra.</p>
+                <p>This process, not discovered by me, involves "pulling out" the faces of a platonic solid and rotating them all by the same amount before connecting all the old and new vertices together. There are many versions of this operation, but one of them specifically creates monodihedral polyhedra. This class of solids is unique for being <strong>chiral</strong> (they essentially have a "handedness" as they don't have any mirror symmetry), a trait shared only by the pentagonal catalan solids among monodihedral polyhedra.</p>
                 <section class="always columns">
                     <section>
                         <img src="images/Tetra.jpg">
-                        <p>a tetrahedron</p>
+                        <p class="faded">a tetrahedron</p>
                     </section>
                     <section>
                         <img src="images/PTetra.jpg">
-                        <p>a "propello" tetrahedron</p>
+                        <p class="faded">a "propello" tetrahedron</p>
                     </section>
                 </section>
             </div>
