--- a/csce242/assignments/08arrays/index.html
+++ b/csce242/assignments/08arrays/index.html
@@ -8,5 +8,12 @@
     <body>
         <h1>Assignment 8</h1>
         <h2>JavaScript Arrays</h2>
+        <main>
+            <section id="pokemon" class="columns"></section>
+            <h3>All images taken from <a href="https://bulbapedia.bulbagarden.net/">Bulbagarden</a></h3>
+            <section id="popup" class="hide"><span id="close">&#10006;</span></section>
+        </main>
+        <h3>&copy; Thomas Zwetsloot</h3>
+        <script src="array.js"></script>
     </body>
 </html>
