--- a/csce242/index.html
+++ b/csce242/index.html
@@ -16,7 +16,7 @@
             </header>
             
             <main id="core-main">
-                <h2>Assignments</h2>
+                <h2 class="spacer">Assignments</h2>
 
                 <nav id="core-nav">
                     <ul class="columns">
@@ -69,9 +69,16 @@
                                 <p>A showcase of JS loops and some CSS art</p>
                             </div>
                         </a>
+                        <a href="assignments/08arrays/index.html">
+                            <div class="assignment">
+                                <h3>JS Arrays</h3>
+                                <img src="images/assign8.png">
+                                <p>A demonstration of JS associative arrays</p>
+                            </div>
+                        </a>
                     </ul>
                 </nav>
-                <h2>Projects</h2>
+                <h2 class="spacer">Projects</h2>
 
                 <nav id="core-nav">
                     <ul class="columns">
