--- a/csce242/index.html
+++ b/csce242/index.html
@@ -76,6 +76,13 @@
                                 <p>A demonstration of JS associative arrays</p>
                             </div>
                         </a>
+                        <a href="assignments/09classes/index.html">
+                            <div class="assignment">
+                                <h3>JS Classes</h3>
+                                <img src="images/assign9.png">
+                                <p>A demonstration of JS classes</p>
+                            </div>
+                        </a>
                     </ul>
                 </nav>
                 <h2 class="spacer">Projects</h2>
