--- a/csce242/examples/js/jsons.html
+++ b/csce242/examples/js/jsons.html
@@ -34,6 +34,20 @@
                 </nav>
                 <h2>JSON Parsing</h2>
             </header>
+            <main>
+                <div id="slideshow">
+                    <div id="slides">
+                        <img src="images/slideshow/boat.jpg" alt="boat">
+                        <img src="images/slideshow/hill.jpg" alt="hill" class="hidden">
+                        <img src="images/slideshow/nature-path.jpg" alt="path" class="hidden">
+                        <img src="images/slideshow/water-mountains.jpg" alt="mountains" class="hidden">
+                        <img src="images/slideshow/waterfall.jpg" alt="waterfall" class="hidden">
+                    </div>
+
+                    <a href="#" id="prev">&lt;</a>
+                    <a href="#" id="next">&gt;</a>
+                </div>
+            </main>
             <main class="columns examples">
                 <section class="sub-section">
                    <a href="json-shoes.html">
@@ -60,5 +74,6 @@
         </div>
         <script src="js/jsons.js"></script>
         <script src="js/toggle-nav.js"></script>
+        <script src="js/slide-buttons.js"></script>
     </body>
 </html>
